Redesign packet info

--- a/package.json
+++ b/package.json
@@ -20,6 +20,20 @@
     "last 1 chrome versions"
   ],
   "dependencies": {
-    "json-format-highlight": "^1.0.4"
+    "@sveltejs/svelte-virtual-list": "^3.0.1",
+    "ext-name": "^5.0.0",
+    "fastify": "^2.12.0",
+    "fastify-websocket": "^1.1.0",
+    "fastify-ws": "^1.0.3",
+    "isomorphic-ws": "^4.0.1",
+    "json-format-highlight": "^1.0.4",
+    "minecraft-protocol": "^1.10.0",
+    "msgpack": "^1.0.3",
+    "msgpack-lite": "^0.1.26",
+    "msgpack5": "^4.2.1",
+    "vu": "^0.0.0",
+    "vue-feather-icons": "^5.0.0",
+    "vue-virtual-scroll-list": "^1.4.4",
+    "vue-virtual-scroller": "^1.0.0-rc.2"
   }
 }
