Redesign packets recording
Now you have to click the record button to start recording packets. This will help with performance and also save some bandtwitdh between browser and the server.

How this works is basically that server broadcasts packets to all websocket clients all the time. When you press record a new websocket connection is being created and frontend receives the broadcasted packets. When you stop recording the websocketconnection is ended and client no longer receives the packets. Then user is able to see the packets in the client.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "parcel src/index.html",
+    "start": "parcel -d public src/index.html",
     "build": "rm -rf public/*s && parcel build --no-source-maps -d public src/index.html"
   },
   "devDependencies": {
