--- a/package.json
+++ b/package.json
@@ -35,5 +35,7 @@
     "vue-feather-icons": "^5.0.0",
     "vue-virtual-scroll-list": "^1.4.4",
     "vue-virtual-scroller": "^1.0.0-rc.2"
-  }
+  },
+  "repository": "https://github.com/wvffle/minecraft-packet-debugger.git",
+  "author": "Kasper Seweryn <github@wvffle.net>"
 }
