--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "mcpd",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0-alpha.2",
   "main": "index.js",
+  "bin": {
+    "mcpd": "bin/mcpd.js"
+  },
   "license": "MIT",
   "scripts": {
     "start": "parcel -d public src/index.html",
@@ -18,6 +21,7 @@
     "last 1 chrome versions"
   ],
   "dependencies": {
+    "commander": "^4.1.1",
     "env-paths": "^2.2.0",
     "ext-name": "^5.0.0",
     "fastify": "^2.12.0",
@@ -28,8 +32,7 @@
     "minecraft-protocol": "^1.10.0",
     "msgpack-lite": "^0.1.26",
     "vue": "^2.5.21",
-    "vue-feather-icons": "^5.0.0",
-    "vue-virtual-scroller": "^1.0.0-rc.2"
+    "vue-feather-icons": "^5.0.0"
   },
   "repository": "https://github.com/wvffle/minecraft-packet-debugger.git",
   "author": "Kasper Seweryn <github@wvffle.net>"
