--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel -d public src/index.html",
-    "build": "rm -rf public/*s && parcel build --no-source-maps -d public src/index.html",
+    "build": "rm -rf public/* && parcel build --no-source-maps -d public src/index.html",
     "prepublishOnly": "yarn build && git add public"
   },
   "devDependencies": {
