--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mcpd",
-  "version": "1.0.0-alpha.6",
+  "version": "1.0.0-alpha.7",
   "main": "index.js",
   "bin": {
     "mcpd": "bin/mcpd.js"
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "commander": "^4.1.1",
+    "deep-extend": "^0.6.0",
     "env-paths": "^2.2.0",
     "ext-name": "^5.0.0",
     "fastify": "^2.12.0",
